# gale

./: .gitignore  CMakeLists.txt  MIGRATION.md  README.md  README_IDF.md  gale.ino  gale.py  main.py  partitions.csv  sdkconfig.defaults
main/: CHIPProjectConfig.h  CMakeLists.txt  Kconfig.projbuild  ble_hrm.c  ble_hrm_nimble.c  fan_control.c  gale.h  idf_component.yml  led_control.c  main.c  matter_device.cpp  matter_device.h  nvs_config.c  ota_update.c  web_server.c  wifi_manager.c
